[gd_scene load_steps=18 format=2]

[ext_resource path="res://art/BadcillusDead.png" type="Texture" id=1]
[ext_resource path="res://art/Badcillius_TileSheet.png" type="Texture" id=2]
[ext_resource path="res://art/enemyDeathSound.wav" type="AudioStream" id=5]
[ext_resource path="res://mob.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 215, 415 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 215, 0, 215, 415 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 430, 0, 215, 415 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 645, 0, 215, 415 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 860, 0, 215, 415 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 415, 230, 415 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 230, 415, 265, 415 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 415, 230, 415 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), ExtResource( 1 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "attack",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
height = 20.0798

[sub_resource type="CircleShape2D" id=4]

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
position = Vector2( 227, 331 )
collision_mask = 2
mode = 2
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 13 )

[node name="mobMovingAnim" type="AnimatedSprite" parent="."]
position = Vector2( -15, 2 )
rotation = 1.5708
scale = Vector2( 0.305004, 0.305004 )
frames = SubResource( 1 )
animation = "move"

[node name="mobDeathAnim" type="AnimatedSprite" parent="."]
position = Vector2( -15, 2 )
rotation = 1.5708
scale = Vector2( 0.305, 0.305 )
frames = SubResource( 23 )
animation = "death"

[node name="mobAttackAnim" type="AnimatedSprite" parent="."]
position = Vector2( -15, 2 )
rotation = 1.5708
scale = Vector2( 0.305, 0.305 )
frames = SubResource( 2 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 4 )
rotation = -1.57079
scale = Vector2( 2.34919, -2.43952 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.22529, 1.60705 )

[node name="hitArea" type="Area2D" parent="."]
position = Vector2( -8, 4 )
scale = Vector2( 1.09878, 0.722262 )

[node name="hitCollisioner" type="CollisionShape2D" parent="hitArea"]
rotation = 1.5708
scale = Vector2( 3.34214, 2.30771 )
shape = SubResource( 3 )

[node name="enemyDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 20.0

[node name="visionArea" type="Area2D" parent="."]
visible = false
position = Vector2( 60, 0.535522 )
scale = Vector2( 13.0764, 13.0764 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="visionArea"]
position = Vector2( 7.64736, -0.117428 )
scale = Vector2( 1.79024, 1.79024 )
shape = SubResource( 4 )

[node name="mobMovingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="mobDeathAnim" to="." method="_on_mobDeathAnim_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="hitArea" to="." method="_on_hitArea_area_entered"]
